--- a/index.pug
+++ b/index.pug
@@ -7,6 +7,6 @@ html(lang="en")
 
   body
     h1 Pug - node template engine
-    h2 Hello
-    h3 hello
-    h4 hello
+    include components/navbar.pug 
+
+//- components\navbar.pug
