--- a/index.pug
+++ b/index.pug
@@ -4,9 +4,8 @@ doctype html
 html(lang="en")
   head
     title= Mitravel
-
+    style 
+      include ./assets/style/style.scss
   body
     h1 Pug - node template engine
     include components/navbar.pug 
-
-//- components\navbar.pug
