--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -1,7 +1,11 @@
 header.container
-    p Copyright текст
     nav.navbar
-    picture 
-        img(src='./assets/images/Path.png')
-        img(src="./assets/images/Path.png", alt="#")
+        picture 
+            img(src='./assets/images/Path.png')
+            img(src='./assets/images/Path.png', alt="#")
+        div MITRAVEL
+        div Hamburger
+picture.background 
+    img(src='./assets/images/Background.jpg', alt="")
+        
     
