--- a/index.pug
+++ b/index.pug
@@ -5,7 +5,6 @@ html(lang="en")
   head
     title= Mitravel
     style 
-      include ./assets/style/style.scss
+      include ./assets/style/dist/style.css
   body
-    h1 Pug - node template engine
     include components/navbar.pug 
