--- a/index.pug
+++ b/index.pug
@@ -5,6 +5,6 @@ html(lang="en")
   head
     title= Mitravel
     style 
-      include ./assets/style/dist/style.css
+      include ./assets/style/style.css
   body
     include components/navbar.pug 
