--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -1,34 +1,9 @@
-
-$max-width: 1570px;
-$margin: 0 auto;
-$font-family: 'SFProDisplay';
-
-header {
-    max-width: $max-width;
-    margin: $margin;
-    position: relative;
-    z-index: 2;
-
-    nav {
-        display: flex;
-        justify-content: space-between;
-
-        div {
-            font-family: $font-family;
-            font-size: 22px;
-            line-height: 26px;
-            letter-spacing: 2px;
-
-            color: #FFFFFF;
-        }
-    }
+@font-face {
+    font-family: 'SFProDisplay';
+    src: url("/assets/fonts/SFPRODISPLAYREGULAR.OTF");
 }
 
-.background {
-    width: 100%;
-    position: absolute;
-    object-fit: cover;
-    height: 100%;
-    top: 0;
-    left: 0;
+body{
+    font-family: 'SFProDisplay', sans-serif;
 }
+@import 'styleHeader.scss';
