--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,8 +2,23 @@
   font-family: "SFProDisplay";
   src: url("/assets/fonts/SFPRODISPLAYREGULAR.OTF");
 }
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
+
 body {
   font-family: "SFProDisplay", sans-serif;
+}
+
+.container {
+  max-width: 1570px;
+  height: 1080px;
+  position: relative;
 }
 
 header {
@@ -39,8 +54,61 @@ header nav div {
 }
 .background img {
   width: 100%;
+  height: 1080px;
 }
 
 .wrapMainText {
-  z-index: 3;
+  position: absolute;
+  color: #ffffff;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  margin: 162px 0px 0px 0px;
+}
+.wrapMainText .head {
+  font-size: 11px;
+  line-height: 13px;
+  letter-spacing: 2px;
+  margin-bottom: 57px;
+}
+.wrapMainText .title {
+  font-size: 80px;
+  line-height: 84px;
+  margin-bottom: 40px;
+}
+.wrapMainText .mainText {
+  font-family: "SFCompactText";
+  font-size: 14px;
+  line-height: 16px;
+  margin-bottom: 60px;
+}
+.wrapMainText .btn {
+  max-width: 274px;
+  height: 80px;
+  background: #e8594e;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+}
+.wrapMainText .btn button {
+  color: #ffffff;
+  font-size: 12px;
+  letter-spacing: 2.18182px;
+  text-align: center;
+  vertical-align: baseline;
+}
+
+.bottomHead {
+  position: absolute;
+  bottom: 0;
+  height: 120px;
+  display: flex;
+}
+.bottomHead input {
+  max-width: 1066px;
+}
+.bottomHead .toggelImg {
+  background-color: rgba(223, 223, 223, 0.5019607843);
+  background: #ffffff;
+  box-shadow: inset 0px -2px 0px rgba(223, 223, 223, 0.5);
 }/*# sourceMappingURL=style.css.map */
