--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -2,8 +2,17 @@
     font-family: 'SFProDisplay';
     src: url("/assets/fonts/SFPRODISPLAYREGULAR.OTF");
 }
+button {
+    padding: 0;
+    border: none;
+    font: inherit;
+    color: inherit;
+    background-color: transparent;
+    cursor: pointer;
+  }
 
 body{
     font-family: 'SFProDisplay', sans-serif;
 }
 @import 'styleHeader.scss';
+
