--- a/assets/style/styleHeader.scss
+++ b/assets/style/styleHeader.scss
@@ -1,6 +1,12 @@
 $max-width: 1570px;
 $margin: 0 auto;
 
+.container {
+    max-width: $max-width;
+    height: 1080px;
+    position: relative;
+}
+
 header {
     max-width: $max-width;
     margin: $margin;
@@ -11,7 +17,7 @@ header {
         display: flex;
         justify-content: space-between;
         padding-top: 53px;
-        img{
+        img {
             padding-right: 40px;
         }
         div {
@@ -32,8 +38,60 @@ header {
     left: 0;
     img {
         width: 100%;
+        height: 1080px;
     }
 }
-.wrapMainText{
-    z-index: 3;
+.wrapMainText {
+    position: absolute;
+    color: #ffffff;
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    margin: 162px 0px 0px 0px;
+    .head {
+        font-size: 11px;
+        line-height: 13px;
+        letter-spacing: 2px;
+        margin-bottom: 57px;
+    }
+    .title {
+        font-size: 80px;
+        line-height: 84px;
+        margin-bottom: 40px;
+    }
+    .mainText {
+        font-family: "SFCompactText";
+        font-size: 14px;
+        line-height: 16px;
+        margin-bottom: 60px;
+    }
+    .btn {
+        max-width: 274px;
+        height: 80px;
+        background: #e8594e;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        button {
+            color: #ffffff;
+            font-size: 12px;
+            letter-spacing: 2.18182px;
+            text-align: center;
+            vertical-align: baseline;
+        }
+    }
+}
+.bottomHead {
+    position: absolute;
+    bottom: 0;
+    height: 120px;
+    display: flex;
+    input {
+        max-width: 1066px;
+    }
+    .toggelImg {
+        background-color: #dfdfdf80;
+        background: #ffffff;
+        box-shadow: inset 0px -2px 0px rgba(223, 223, 223, 0.5);
+    }
 }
