--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -1,3 +1,5 @@
+picture.background 
+    img(src='./assets/images/Background.jpg', alt="")
 header.container
     nav.navbar
         picture 
@@ -5,12 +7,15 @@ header.container
             img(src='./assets/images/Path.svg', alt="#")
         div MITRAVEL
         div Hamburger
-picture.background 
-    img(src='./assets/images/Background.jpg', alt="")
-div.wrapMainText 
-    p.head NEW BOOK
-    p.title Mother Earth Hosts Our Travels
-    p.mainText There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete 
-    p.btn 
-        button BUY THE BOOK        
+    div.wrapMainText 
+        div.head NEW BOOK
+        div.title Mother Earth Hosts Our Travels
+        div.mainText There are not many cities that have experienced such social and political extremes in recent history as Amsterdam. In the 20th century alone, Amsterdam faced the atrocities of war for the first time in 400 years, became the radical center of 1960s social movements and witnessed a complete 
+        div.btn 
+            button BUY THE BOOK        
+    div.bottomHead
+        input(type="text" placeholder='Search stories')
+        div.toggelImg hello
+           
+
 
