--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -14,8 +14,9 @@ header.container
         div.btn 
             button BUY THE BOOK        
     div.bottomHead
-        input(type="text" placeholder='Search stories')
-        div.toggelImg hello
-           
+            input(type="text" placeholder='Search stories')
+            div.picture
+                img(src="./assets/images/Rectangle2.jpg", alt="#")      
+                div.toggle wonderful moutain     
 
 
