--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -15,4 +15,5 @@ body{
     font-family: 'SFProDisplay', sans-serif;
 }
 @import 'styleHeader.scss';
-
+@import 'firstArticle.scss';
+@import 'secondArticle.scss';
