--- a/index.pug
+++ b/index.pug
@@ -7,4 +7,5 @@ html(lang="en")
     style 
       include ./assets/style/style.css
   body
-    include components/navbar.pug 
+    include components/navbar.pug
+    include components/firstArticle.pug
