--- a/assets/style/secondArticle.scss
+++ b/assets/style/secondArticle.scss
@@ -1,9 +1,39 @@
 $max-width: 1570px;
 $margin: 0 auto;
 
-.container {
-    max-width: $max-width;
-    height: 1080px;
+section {
     position: relative;
-}
+    margin-top: -120px;
+    .container {
+        max-width: $max-width;
+        height: 1080px;
+        position: absolute;
+    }
+    .backgroundSecond {
+        width: 100%;
+        object-fit: cover;
+        height: 100%;
+        top: 0;
+        left: 0;
+        img {
+            width: 100%;
+            height: 1080px;
+        }
+        .rectangle{
+            max-width: 35.4%;
+            position: absolute;
+            right: 0;
+            top: 0;
+        }
+    }
+    .wrapFeatured{
+        position: absolute;
+        display: flex;
+        top: 0;
+        max-width: $max-width;
+        margin: $margin;
+        .leftColumn{
 
+        }
+    }
+}
