--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -158,4 +158,39 @@ header nav div {
   display: flex;
   justify-content: space-between;
   margin-top: 96px;
+}
+
+section {
+  position: relative;
+  margin-top: -120px;
+}
+section .container {
+  max-width: 1570px;
+  height: 1080px;
+  position: absolute;
+}
+section .backgroundSecond {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+section .backgroundSecond img {
+  width: 100%;
+  height: 1080px;
+}
+section .backgroundSecond .rectangle {
+  max-width: 35.4%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+section .wrapFeatured {
+  position: absolute;
+  display: flex;
+  top: 0;
+  max-width: 1570px;
+  margin: 0 auto;
 }/*# sourceMappingURL=style.css.map */
