--- a/index.pug
+++ b/index.pug
@@ -9,3 +9,4 @@ html(lang="en")
   body
     include components/navbar.pug
     include components/firstArticle.pug
+    include components/secondArticle.pug
