--- a/assets/style/firstArticle.css
+++ b/assets/style/firstArticle.css
@@ -5,7 +5,7 @@
   position: relative;
 }
 .container .callArticle {
-  margin-top: 150px;
+  padding-top: 150px;
   max-width: 730px;
   font-weight: 900;
   height: 160px;
