--- a/assets/style/firstArticle.scss
+++ b/assets/style/firstArticle.scss
@@ -7,7 +7,7 @@ $margin: 0 auto;
     height: 1080px;
     position: relative;
     .callArticle {
-        margin-top: 150px;
+        padding-top: 150px;
         max-width: 730px;
         font-weight: 900;
         height: 160px;
