--- a/assets/style/secondArticle.scss
+++ b/assets/style/secondArticle.scss
@@ -3,37 +3,84 @@ $margin: 0 auto;
 
 section {
     position: relative;
-    margin-top: -120px;
-    .container {
-        max-width: $max-width;
-        height: 1080px;
-        position: absolute;
-    }
-    .backgroundSecond {
-        width: 100%;
-        object-fit: cover;
-        height: 100%;
-        top: 0;
-        left: 0;
-        img {
-            width: 100%;
-            height: 1080px;
-        }
-        .rectangle{
-            max-width: 35.4%;
-            position: absolute;
-            right: 0;
-            top: 0;
-        }
-    }
-    .wrapFeatured{
-        position: absolute;
-        display: flex;
-        top: 0;
-        max-width: $max-width;
-        margin: $margin;
-        .leftColumn{
+    height: 1080px;
+}
 
+.container {
+    max-width: $max-width;
+    height: 1080px;
+    position: relative;
+}
+.leftColumn {
+    position: absolute;
+    top: 604px;
+    max-width: 634px;
+    .btnTop {
+        width: 132px;
+        height: 48px;
+        background: #e8594e;
+        border-radius: 24px;
+        display: flex;
+        justify-content: center;
+        .btnTopText {
+            font-size: 11px;
+            letter-spacing: 2px;
+            color: #ffffff;
+            text-align: center;
+            vertical-align: baseline;
         }
+    }
+    .callFeatured {
+        height: 128px;
+        font-size: 48px;
+        line-height: 64px;
+        color: #ffffff;
+        margin: 16px 0px;
+    }
+    .textFeatured {
+        font-family: "SFCompactText";
+        font-size: 14px;
+        line-height: 21px;
+        color: #ffffff;
+    }
+    .btnBottom {
+        margin-top: 40px;
+        max-width: 274px;
+        height: 80px;
+        background: #73afba;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        .btnBottomText {
+            color: #ffffff;
+            font-size: 12px;
+            letter-spacing: 2.18182px;
+            text-align: center;
+            vertical-align: baseline;
+        }
+    }
+}
+.rightColumn {
+    position: absolute;
+    max-width: 678px;
+    right: 0;
+    top: 0;
+}
+
+.backgroundSecond {
+    position: absolute;
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+    top: 0;
+    left: 0;
+    img {
+        width: 100%;
+        height: 1080px;
+    }
+    .rectangle {
+        max-width: 35.4%;
+        position: absolute;
+        right: 0;
     }
 }
