--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -1,9 +1,9 @@
 picture.background 
-    img(src='./assets/images/Background.jpg', alt="")
+    img(src='./assets/images/Background.jpg', alt="#")
 header.container
     nav.navbar
         picture 
-            img(src='./assets/images/Path.png')
+            img(src='./assets/images/Path.png', alt='#')
             img(src='./assets/images/Path.svg', alt="#")
         div MITRAVEL
         div Hamburger
