--- a/components/secondArticle.pug
+++ b/components/secondArticle.pug
@@ -3,29 +3,34 @@ section
         img(src='./assets/images/Background2.png', alt="#")
     .container 
         .leftColumn 
-            div.btnTop
+            .btnTop
                 button.btnTopText FEATURED
-            div.callFeatured How To Fly A Private Jet On Your Next Trip
-            div.textFeatured The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-            div.btnBottom
+            .callFeatured How To Fly A Private Jet On Your Next Trip
+            .textFeatured The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
+            .btnBottom
                 button.btnBottomText READ ARTICLE
-    .rightColumn
+    .rightContainer
         img.rectangle(src='./assets/images/Rectangle.png', alt="#") 
-        p.callSecondCol Featured Stories
-        p.firstAuthor
-            p
-                img(src="./assets/images/Avatar1.jpg", alt="#")
-                p.topicOne Do A Sporting Stag Do In Birmingham
-                p.dateTopicOne 13 Dec 2019   
-            p
-                img(src="./assets/images/Avatar2.jpg", alt="#")
-                p.topicTwo From Wetlands To Canals And Dams Amsterdam Is Alive
-                p.dateTopicTwo 13 Dec 2019   
-            p
-                img(src="./assets/images/Avatar3.jpg", alt="#")
-                p.topicThree Stu Unger Rise And Fall Of A Poker Genius
-                p.dateTopicThree 13 Dec 2019   
-            p
-                img(src="./assets/images/Avatar4.jpg", alt="#")
-                p.topicFour New Ideas For A Low Cost Vacation On Water
-                p.dateTopicFour 13 Dec 2019   
+        .rightColumn
+            .callSecondCol Featured Stories
+            .topics
+                .topic
+                    img(src="./assets/images/Avatar1.jpg", alt="#")
+                    .topicWrap
+                        .textTopic Do A Sporting Stag Do In Birmingham
+                        .dateTopic 13 Dec 2019   
+                .topic
+                    img(src="./assets/images/Avatar2.jpg", alt="#")
+                    .topicWrap
+                        .textTopic From Wetlands To Canals And Dams Amsterdam Is Alive
+                        .dateTopic 13 Dec 2019   
+                .topic
+                    img(src="./assets/images/Avatar3.jpg", alt="#")
+                    .topicWrap
+                        .textTopic Stu Unger Rise And Fall Of A Poker Genius
+                        .dateTopic 13 Dec 2019   
+                .topic
+                    img(src="./assets/images/Avatar4.jpg", alt="#")
+                    .topicWrap
+                        .textTopic New Ideas For A Low Cost Vacation On Water
+                        .dateTopic 13 Dec 2019   
