--- a/index.pug
+++ b/index.pug
@@ -10,3 +10,4 @@ html(lang="en")
     include components/navbar.pug
     include components/firstArticle.pug
     include components/secondArticle.pug
+    include components/thirdArticle.pug
