--- a/index.pug
+++ b/index.pug
@@ -11,3 +11,4 @@ html(lang="en")
     include components/firstArticle.pug
     include components/secondArticle.pug
     include components/thirdArticle.pug
+    include components/form.pug
