--- a/index.pug
+++ b/index.pug
@@ -12,3 +12,4 @@ html(lang="en")
     include components/secondArticle.pug
     include components/thirdArticle.pug
     include components/form.pug
+    include components/footer.pug
