--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -312,21 +312,21 @@ section {
   margin: 0 auto 96px auto;
 }
 
-picture {
+.pictureStyle {
   position: relative;
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-picture .wrapVideo {
+.pictureStyle .wrapVideo {
   position: relative;
 }
-picture .wrapVideo .btnPlay {
+.pictureStyle .wrapVideo .btnPlay {
   position: absolute;
   left: 48px;
   top: 39px;
 }
-picture .wrapVideo .bottomTextPlay {
+.pictureStyle .wrapVideo .bottomTextPlay {
   position: absolute;
   left: 40px;
   bottom: 40px;
@@ -334,7 +334,7 @@ picture .wrapVideo .bottomTextPlay {
   line-height: 40px;
   color: #ffffff;
 }
-picture .sizeImg {
+.pictureStyle .sizeImg {
   max-height: 550px;
   align-self: center;
 }
@@ -383,7 +383,6 @@ picture .sizeImg {
   width: 501px;
 }
 .wrapForm form .wrapInput .line input {
-  font-size: 11px;
   letter-spacing: 2px;
   color: #1c2e3d;
   border: transparent;
@@ -406,4 +405,27 @@ picture .sizeImg {
   letter-spacing: 2.18182px;
   text-align: center;
   vertical-align: baseline;
+}
+
+.footer .containerFooter {
+  max-width: 1570px;
+  margin: 0 auto;
+  height: 578px;
+  display: flex;
+}
+.footer .containerFooter .firstColumn {
+  display: flex;
+  flex-direction: column;
+}
+.footer .containerFooter .secondColumn {
+  display: flex;
+  flex-direction: column;
+}
+.footer .containerFooter .thirdColumn {
+  display: flex;
+  flex-direction: column;
+}
+.footer .containerFooter .fourthColumn {
+  display: flex;
+  flex-direction: column;
 }/*# sourceMappingURL=style.css.map */
