--- a/assets/style/thirdArticle.css
+++ b/assets/style/thirdArticle.css
@@ -20,21 +20,21 @@
   margin: 0 auto 96px auto;
 }
 
-picture {
+.pictureStyle {
   position: relative;
   display: flex;
   width: 100%;
   justify-content: space-between;
 }
-picture .wrapVideo {
+.pictureStyle .wrapVideo {
   position: relative;
 }
-picture .wrapVideo .btnPlay {
+.pictureStyle .wrapVideo .btnPlay {
   position: absolute;
   left: 48px;
   top: 39px;
 }
-picture .wrapVideo .bottomTextPlay {
+.pictureStyle .wrapVideo .bottomTextPlay {
   position: absolute;
   left: 40px;
   bottom: 40px;
@@ -42,7 +42,7 @@ picture .wrapVideo .bottomTextPlay {
   line-height: 40px;
   color: #ffffff;
 }
-picture .sizeImg {
+.pictureStyle .sizeImg {
   max-height: 550px;
   align-self: center;
 }/*# sourceMappingURL=thirdArticle.css.map */
