--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -1,37 +1,67 @@
 $max-width: 1570px;
 $margin: 0 auto;
 
-.footer{
-    .containerFooter{
+.footer {
+    margin-top: 140px;
+    .containerFooter {
         max-width: $max-width;
         margin: 0 auto;
         height: 578px;
         display: flex;
-        .firstColumn{
+        justify-content: space-between;
+        .column {
             display: flex;
             flex-direction: column;
+            .title {
+                font-family: "HelveticaNeue";
+                font-size: 12px;
+                line-height: 14px;
+                letter-spacing: 2.15px;
+                text-transform: uppercase;
+                color: #100e0b;
+                padding-bottom: 32px;
+                margin-bottom: 32px;
+                border-bottom: 1px solid #57a773;
+                width: 48px;
+            }
+            a {
+                text-decoration: none;
+                font-family: "Arial";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 13px;
+                line-height: 29px;
+                color: #959ea6;
+            }
+            input {
+                width: 336px;
+                height: 64px;
+                padding-left: 32px;
+                margin-bottom: 16px;
+                border-radius: 8px;
+                background: #ffffff;
+                box-shadow: inset 0px 1px 0px rgba(179, 179, 179, 0.5);
+            }
+            .btn {
+                max-width: 376px;
+                height: 80px;
+                background: #73AFBA;
+                border-radius: 8px;
+                display: flex;
+                justify-content: center;
+                button {
+                    color: #ffffff;
+                    font-size: 12px;
+                    letter-spacing: 2.18182px;
+                    text-align: center;
+                    vertical-align: baseline;
+                    text-transform: uppercase;
+                }
+            }
         }
-        .secondColumn{
-            display: flex;
-            flex-direction: column;
-        }
-        .thirdColumn{
-            display: flex;
-            flex-direction: column;
-        }
-        .fourthColumn{
+        .fourthColumn {
             display: flex;
             flex-direction: column;
         }
     }
 }
-
-
-
-
-
-
-
-
-
-
