--- a/assets/style/thirdArticle.scss
+++ b/assets/style/thirdArticle.scss
@@ -22,7 +22,7 @@ $margin: 0 auto;
         margin: 0 auto 96px auto;
     }
 }
-.pictureStyle {
+picture {
     position: relative;
     display: flex;
     width: 100%;
