--- a/components/footer.pug
+++ b/components/footer.pug
@@ -1,6 +1,6 @@
 .footer
     .containerFooter
-        .firstColumn
+        .column
             .title Company
             a(href="#") About
             a(href="#") Press
@@ -8,7 +8,7 @@
             a(href="#") Careers
             a(href="#") Security
             a(href="#") Driver Centre
-        .secondColumn
+        .column
             .title Information
             a(href="#") Our Story
             a(href="#") Recipes
@@ -16,7 +16,7 @@
             a(href="#") Resources
             a(href="#") Newsletter
             a(href="#") Contact
-        .thirdColumn
+        .column
             .title Information
             a(href="#") Customer service
             a(href="#") Recommend a restaurant
@@ -24,10 +24,11 @@
             a(href="#") Jobs
             a(href="#") Press
             a(href="#") Terms of use           
-        .fourthColumn
+        .column
             .title Subscribe Now
-            input(type="text")           
-            button Subscribe Now
+            input(type="text" placeholder='Your email')
+            .btn           
+                button Subscribe Now
  
        
        
