--- a/components/thirdArticle.pug
+++ b/components/thirdArticle.pug
@@ -1,7 +1,7 @@
 .wrap
     .nameArticle Featured Videos
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-picture.pictureStyle
+picture
     img(src='./assets/images/3.jpg', alt="#").sizeImg
     .wrapVideo
         img(src='./assets/images/1.jpg', alt="#")
