--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -2,13 +2,18 @@ $max-width: 1570px;
 $margin: 0 auto;
 
 .footer {
+    height: 498px;
     margin-top: 140px;
+    border-top: 1px solid #b3b3b3;
+    border-bottom: 1px solid #b3b3b3;
     .containerFooter {
         max-width: $max-width;
         margin: 0 auto;
-        height: 578px;
+        padding-top: 124px;
         display: flex;
         justify-content: space-between;
+        margin-bottom: 120px;
+
         .column {
             display: flex;
             flex-direction: column;
@@ -20,9 +25,11 @@ $margin: 0 auto;
                 text-transform: uppercase;
                 color: #100e0b;
                 padding-bottom: 32px;
-                margin-bottom: 32px;
+            }
+            .line {
                 border-bottom: 1px solid #57a773;
                 width: 48px;
+                margin-bottom: 32px;
             }
             a {
                 text-decoration: none;
@@ -45,7 +52,7 @@ $margin: 0 auto;
             .btn {
                 max-width: 376px;
                 height: 80px;
-                background: #73AFBA;
+                background: #73afba;
                 border-radius: 8px;
                 display: flex;
                 justify-content: center;
@@ -59,9 +66,22 @@ $margin: 0 auto;
                 }
             }
         }
-        .fourthColumn {
-            display: flex;
-            flex-direction: column;
+    }
+}
+.footerBottom {
+    max-width: $max-width;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    padding: 32px 0px;
+    .footText {
+        font-family: "SFProText";
+        font-size: 13px;
+        line-height: 15px;
+        color: #959ea6;
+        display: flex;
+        .service{
+            padding-right: 40px;
         }
     }
 }
