--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -1,12 +1,16 @@
 .footer {
+  height: 498px;
   margin-top: 140px;
+  border-top: 1px solid #b3b3b3;
+  border-bottom: 1px solid #b3b3b3;
 }
 .footer .containerFooter {
   max-width: 1570px;
   margin: 0 auto;
-  height: 578px;
+  padding-top: 124px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 120px;
 }
 .footer .containerFooter .column {
   display: flex;
@@ -20,9 +24,11 @@
   text-transform: uppercase;
   color: #100e0b;
   padding-bottom: 32px;
-  margin-bottom: 32px;
+}
+.footer .containerFooter .column .line {
   border-bottom: 1px solid #57a773;
   width: 48px;
+  margin-bottom: 32px;
 }
 .footer .containerFooter .column a {
   text-decoration: none;
@@ -45,7 +51,7 @@
 .footer .containerFooter .column .btn {
   max-width: 376px;
   height: 80px;
-  background: #73AFBA;
+  background: #73afba;
   border-radius: 8px;
   display: flex;
   justify-content: center;
@@ -58,7 +64,21 @@
   vertical-align: baseline;
   text-transform: uppercase;
 }
-.footer .containerFooter .fourthColumn {
+
+.footerBottom {
+  max-width: 1570px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 32px 0px;
+}
+.footerBottom .footText {
+  font-family: "SFProText";
+  font-size: 13px;
+  line-height: 15px;
+  color: #959ea6;
+  display: flex;
+}
+.footerBottom .footText .service {
+  padding-right: 40px;
 }/*# sourceMappingURL=footer.css.map */
