--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -408,14 +408,18 @@ picture .sizeImg {
 }
 
 .footer {
+  height: 498px;
   margin-top: 140px;
+  border-top: 1px solid #b3b3b3;
+  border-bottom: 1px solid #b3b3b3;
 }
 .footer .containerFooter {
   max-width: 1570px;
   margin: 0 auto;
-  height: 578px;
+  padding-top: 124px;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 120px;
 }
 .footer .containerFooter .column {
   display: flex;
@@ -429,9 +433,11 @@ picture .sizeImg {
   text-transform: uppercase;
   color: #100e0b;
   padding-bottom: 32px;
-  margin-bottom: 32px;
+}
+.footer .containerFooter .column .line {
   border-bottom: 1px solid #57a773;
   width: 48px;
+  margin-bottom: 32px;
 }
 .footer .containerFooter .column a {
   text-decoration: none;
@@ -443,7 +449,7 @@ picture .sizeImg {
   color: #959ea6;
 }
 .footer .containerFooter .column input {
-  width: 368px;
+  width: 336px;
   height: 64px;
   padding-left: 32px;
   margin-bottom: 16px;
@@ -454,7 +460,7 @@ picture .sizeImg {
 .footer .containerFooter .column .btn {
   max-width: 376px;
   height: 80px;
-  background: #73AFBA;
+  background: #73afba;
   border-radius: 8px;
   display: flex;
   justify-content: center;
@@ -467,7 +473,21 @@ picture .sizeImg {
   vertical-align: baseline;
   text-transform: uppercase;
 }
-.footer .containerFooter .fourthColumn {
+
+.footerBottom {
+  max-width: 1570px;
+  margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  padding: 32px 0px;
+}
+.footerBottom .footText {
+  font-family: "SFProText";
+  font-size: 13px;
+  line-height: 15px;
+  color: #959ea6;
+  display: flex;
+}
+.footerBottom .footText .service {
+  padding-right: 10px;
 }/*# sourceMappingURL=style.css.map */
