--- a/components/footer.pug
+++ b/components/footer.pug
@@ -2,6 +2,7 @@
     .containerFooter
         .column
             .title Company
+            .line
             a(href="#") About
             a(href="#") Press
             a(href="#") Blog
@@ -10,6 +11,7 @@
             a(href="#") Driver Centre
         .column
             .title Information
+            .line
             a(href="#") Our Story
             a(href="#") Recipes
             a(href="#") Nutrition
@@ -18,6 +20,7 @@
             a(href="#") Contact
         .column
             .title Information
+            .line
             a(href="#") Customer service
             a(href="#") Recommend a restaurant
             a(href="#") Signup a restaurant
@@ -26,10 +29,15 @@
             a(href="#") Terms of use           
         .column
             .title Subscribe Now
+            .line
             input(type="text" placeholder='Your email')
             .btn           
                 button Subscribe Now
- 
+.footerBottom 
+    .footText © 2019 Mass Impressions. Designed by Tran Mau Tri Tam for Mass Impressions. All rights reserved.
+    .footText 
+        .service Terms of Service
+        .privacy Privacy Policy
        
        
 
