--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -449,13 +449,23 @@ picture .sizeImg {
   color: #959ea6;
 }
 .footer .containerFooter .column input {
-  width: 336px;
+  width: 304px;
   height: 64px;
-  padding-left: 32px;
+  padding: 0 32px;
   margin-bottom: 16px;
+  font-size: 17px;
   border-radius: 8px;
   background: #ffffff;
-  box-shadow: inset 0px 1px 0px rgba(179, 179, 179, 0.5);
+  border: 1px solid rgba(179, 179, 179, 0.5);
+}
+.footer .containerFooter .column input::-moz-placeholder {
+  background: url(assets/style/user.svg) no-repeat right;
+}
+.footer .containerFooter .column input:-ms-input-placeholder {
+  background: url(assets/style/user.svg) no-repeat right;
+}
+.footer .containerFooter .column input::placeholder {
+  background: url(assets/style/user.svg) no-repeat right;
 }
 .footer .containerFooter .column .btn {
   max-width: 376px;
@@ -489,5 +499,5 @@ picture .sizeImg {
   display: flex;
 }
 .footerBottom .footText .service {
-  padding-right: 10px;
+  padding-right: 40px;
 }/*# sourceMappingURL=style.css.map */
