form in third part

--- a/assets/style/form.scss
+++ b/assets/style/form.scss
@@ -46,7 +46,7 @@ $margin: 0 auto;
                     letter-spacing: 2px;
                     color: #1c2e3d;
                     border: transparent;
-                    border-bottom: 1px solid #1c2e3d;
+                    border-bottom: 1px solid rgba(179, 179, 179, 0.5);
                     margin-left: 73px;
                     padding-bottom: 24px;
                     padding-top: 32px;
