--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -386,7 +386,7 @@ picture .sizeImg {
   letter-spacing: 2px;
   color: #1c2e3d;
   border: transparent;
-  border-bottom: 1px solid #1c2e3d;
+  border-bottom: 1px solid rgba(179, 179, 179, 0.5);
   margin-left: 73px;
   padding-bottom: 24px;
   padding-top: 32px;
