--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -244,9 +244,11 @@ section {
   display: flex;
   flex-direction: column;
 }
+.rightContainer .rightColumn .topics .topic:not(:last-child) {
+  border-bottom: 1px solid rgba(227, 227, 227, 0.5);
+}
 .rightContainer .rightColumn .topics .topic {
   display: flex;
-  border-bottom: 1px solid rgba(227, 227, 227, 0.5);
   margin-top: 32px;
 }
 .rightContainer .rightColumn .topics .topic img {
