--- a/components/firstArticle.pug
+++ b/components/firstArticle.pug
@@ -2,6 +2,10 @@ section.container
     div.callArticle Become A Travel Pro In One Easy Lesson
     .wrapImg 
         img(src="./assets/images/Group4.jpg", alt="#")
-        img(src="./assets/images/MaskGroup.png", alt="#")
+        span.withMask 
+            img(src="./assets/images/MaskGroup.png", alt="#")
+            .mask 
+                img(src="./assets/images/mask.png", alt="") 
+            .maskText Vacation Home Rental Success
         img(src="./assets/images/Copy8.png", alt="#")
         img(src="./assets/images/Copy9.png", alt="#")
