--- a/assets/style/firstArticle.css
+++ b/assets/style/firstArticle.css
@@ -17,4 +17,21 @@
   display: flex;
   justify-content: space-between;
   margin-top: 96px;
+}
+.container .wrapImg .withMask {
+  position: relative;
+}
+.container .wrapImg .withMask .mask {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.container .wrapImg .withMask .maskText {
+  position: absolute;
+  font-size: 26px;
+  line-height: 31px;
+  color: #ffffff;
+  left: 53px;
+  bottom: 61px;
+  width: 236px;
 }/*# sourceMappingURL=firstArticle.css.map */
