--- a/assets/style/styleHeader.css
+++ b/assets/style/styleHeader.css
@@ -18,7 +18,7 @@ header nav {
 header nav img {
   padding-right: 40px;
 }
-header nav div {
+header nav p {
   font-size: 22px;
   line-height: 26px;
   letter-spacing: 2px;
@@ -102,10 +102,17 @@ header nav div {
   top: -280px;
 }
 .bottomHead img {
-  background: linear-gradient(0deg, #73afba, #73afba);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px 8px 0px 0px;
   margin-bottom: -4px;
+}
+.bottomHead .btnPlay {
+  position: absolute;
+  top: 100px;
+  left: 45%;
+  border-radius: 0px;
+}
+.bottomHead .btnPlay img {
+  border-radius: 0px;
 }
 .bottomHead .toggle {
   max-width: 502px;
@@ -113,11 +120,10 @@ header nav div {
   background: #73afba;
   border-radius: 0px 4px 0px 0px;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   color: #ffffff;
   font-size: 12px;
-  line-height: 14px;
   letter-spacing: 2.18182px;
   text-transform: uppercase;
 }/*# sourceMappingURL=styleHeader.css.map */
