--- a/assets/style/styleHeader.scss
+++ b/assets/style/styleHeader.scss
@@ -20,7 +20,7 @@ header {
         img {
             padding-right: 40px;
         }
-        p {
+        .mainTitle {
             font-size: 22px;
             line-height: 26px;
             letter-spacing: 2px;
