--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -2,11 +2,12 @@ picture.background
     img(src='./assets/images/Background.jpg', alt="#")
 header.container
     nav.navbar
-        picture 
-            img(src='./assets/images/Path.png', alt='#')
-            img(src='./assets/images/Path.svg', alt="#")
-        p MITRAVEL
-        p Hamburger
+        picture
+            .social 
+                img(src='./assets/images/Path.png', alt='#')
+                img(src='./assets/images/Path.svg', alt="#")
+            .mainTitle MITRAVEL
+            .mainTitle Hamburger
     .wrapMainText 
         .head NEW BOOK
         .title Mother Earth Hosts Our Travels
