--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -35,7 +35,7 @@ header nav {
 header nav img {
   padding-right: 40px;
 }
-header nav p {
+header nav .mainTitle {
   font-size: 22px;
   line-height: 26px;
   letter-spacing: 2px;
