--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -19,4 +19,5 @@ body{
 @import 'secondArticle.scss';
 @import 'thirdArticle.scss';
 @import 'form.scss';
+@import 'inspirations.scss';
 @import 'footer.scss';
