--- a/index.pug
+++ b/index.pug
@@ -12,4 +12,5 @@ html(lang="en")
     include components/secondArticle.pug
     include components/thirdArticle.pug
     include components/form.pug
+    include components/inspirations.pug
     include components/footer.pug
