--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -1,13 +1,29 @@
 .wrap
     .nameArticle Inspirations
     .textArticle The state of Utah in the United States is home to lots of beautiful National Parks, & Bryce Canyon National Park ranks as three of the most magnificent & awe inspiring.
-    picture 
-        img(src="./assets/images/11.png", alt="#")
-        img(src="./assets/images/12.png", alt="#")
+    picture
+        .row1foto
+            img(src="./assets/images/11.png", alt="#")
+            .row1foto-fill
+                .about DESTINATIONS
+                .title A Guide To Rocky Mountain Vacations  
+        .row1foto
+            img(src="./assets/images/12.png", alt="#")
+            .row1foto-fill
+                .about DESTINATIONS
+                .title Traveling To Barcelona
     picture 
         img(src="./assets/images/21.jpg", alt="#")
         img(src="./assets/images/22.jpg", alt="#")
         img(src="./assets/images/23.jpg", alt="#")
-    picture 
-        img(src="./assets/images/31.jpg", alt="#")
-        img(src="./assets/images/32.jpg", alt="#")
+    picture
+        .row1foto
+            img(src="./assets/images/31.jpg", alt="#")
+            .row1foto-fill
+                .about DESTINATIONS
+                .title Traveling To Barcelona
+        .row1foto
+            img(src="./assets/images/32.jpg", alt="#")
+            .row1foto-fill
+                .about DESTINATIONS
+                .title A Guide To Rocky Mountain Vacations  
