--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -432,6 +432,10 @@ picture .sizeImg {
   vertical-align: baseline;
 }
 
+a {
+  text-decoration: none;
+}
+
 .wrap {
   max-width: 1570px;
   margin: 0 auto;
