--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -6,12 +6,12 @@
             img(src="./assets/images/11.png", alt="#")
             .row1foto-fill
                 .about DESTINATIONS
-                .title A Guide To Rocky Mountain Vacations  
+                a.title(href="#") A Guide To Rocky Mountain Vacations    
         .row1foto
             img(src="./assets/images/12.png", alt="#")
             .row1foto-fill
                 .about DESTINATIONS
-                .title Traveling To Barcelona
+                a.title(href="#") Traveling To Barcelona
     picture 
         img(src="./assets/images/21.jpg", alt="#")
         img(src="./assets/images/22.jpg", alt="#")
@@ -21,9 +21,10 @@
             img(src="./assets/images/31.jpg", alt="#")
             .row1foto-fill
                 .about DESTINATIONS
-                .title Traveling To Barcelona
+                a.title(href="#") Traveling To Barcelona  
         .row1foto
             img(src="./assets/images/32.jpg", alt="#")
             .row1foto-fill
                 .about DESTINATIONS
-                .title A Guide To Rocky Mountain Vacations  
+                a.title(href="#") A Guide To Rocky Mountain Vacations  
+                 
