--- a/assets/style/footer.css
+++ b/assets/style/footer.css
@@ -32,8 +32,7 @@
 }
 .footer .containerFooter .column a {
   text-decoration: none;
-  font-family: "Arial";
-  font-style: normal;
+  font-family: "SFCompactText";
   font-weight: 400;
   font-size: 13px;
   line-height: 29px;
