--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -33,8 +33,7 @@ $margin: 0 auto;
             }
             a {
                 text-decoration: none;
-                font-family: "Arial";
-                font-style: normal;
+                font-family: 'SFCompactText';
                 font-weight: 400;
                 font-size: 13px;
                 line-height: 29px;
