--- a/assets/style/inspirations.css
+++ b/assets/style/inspirations.css
@@ -15,7 +15,8 @@ a {
   color: #1c2e3d;
 }
 .wrap .textArticle {
-  max-width: 634px;
+  font-family: "SFCompactText";
+  max-width: 640px;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
@@ -51,6 +52,29 @@ a {
   line-height: 40px;
   color: #ffffff;
   margin-bottom: 30px;
+}
+.wrap picture .row1foto .row1foto-fill .avatar {
+  position: relative;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar1 {
+  position: absolute;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar1 img {
+  position: absolute;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar2 {
+  position: absolute;
+  left: 32px;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar2 img {
+  position: absolute;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar3 {
+  position: absolute;
+  left: 64px;
+}
+.wrap picture .row1foto .row1foto-fill .avatar .avatar3 img {
+  position: absolute;
 }
 .wrap picture .row1foto2 {
   position: relative;
