--- a/components/inspirations.pug
+++ b/components/inspirations.pug
@@ -6,7 +6,17 @@
             img(src="./assets/images/11.png", alt="#")
             .row1foto-fill
                 .about DESTINATIONS
-                a.title(href="#") A Guide To Rocky Mountain Vacations    
+                a.title(href="#") A Guide To Rocky Mountain Vacations
+                .avatar
+                    .avatar1
+                        img(src="./assets/images/avatar5.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar2    
+                        img(src="./assets/images/avatar6.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#")
+                    .avatar3
+                        img(src="./assets/images/avatar7.png", alt="#")
+                        img(src="./assets/images/oval.png", alt="#") 
         .row1foto
             img(src="./assets/images/12.png", alt="#")
             .row1foto-fill
