--- a/components/navbar.pug
+++ b/components/navbar.pug
@@ -7,7 +7,8 @@ header.container
                 img(src='./assets/images/Path.png', alt='#')
                 img(src='./assets/images/Path.svg', alt="#")
             .mainTitle MITRAVEL
-            .mainTitle Hamburger
+            .mainTitle
+                img(src='./assets/images/ham.png', alt='#')
     .wrapMainText 
         .head NEW BOOK
         .title Mother Earth Hosts Our Travels
