--- a/assets/style/inspirations.scss
+++ b/assets/style/inspirations.scss
@@ -16,7 +16,8 @@ a{
         color: #1c2e3d;
     }
     .textArticle {
-        max-width: 634px;
+        font-family: "SFCompactText";
+        max-width: 640px;
         font-size: 16px;
         line-height: 24px;
         text-align: center;
@@ -49,6 +50,29 @@ a{
                     line-height: 40px;
                     color: #ffffff;
                     margin-bottom: 30px;
+                }
+                .avatar{
+                    position: relative;
+                    .avatar1{
+                        position: absolute;
+                        img{
+                            position: absolute;
+                        }
+                    }
+                    .avatar2{
+                        position: absolute;
+                        left: 32px;
+                        img{
+                            position: absolute;
+                        }
+                    }
+                    .avatar3{
+                        position: absolute;
+                        left: 64px;
+                        img{
+                            position: absolute;
+                        }
+                    }
                 }
             }
         }
