--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -2,6 +2,14 @@
     font-family: 'SFProDisplay';
     src: url("/assets/fonts/SFPRODISPLAYBOLD.OTF");
 }
+@font-face {
+    font-family: 'SFCompactText';
+    src: url("/assets/fonts/SFCompactText-Light.otf");
+}
+@font-face {
+    font-family: 'HelveticaNeue';
+    src: url("/assets/fonts/HelveticaNeueCyr-Medium.ttf");
+}
 button {
     padding: 0;
     border: none;
