--- a/assets/style/thirdArticle.scss
+++ b/assets/style/thirdArticle.scss
@@ -13,7 +13,8 @@ $margin: 0 auto;
         color: #1c2e3d;
     }
     .textArticle {
-        max-width: 634px;
+        font-family: "SFCompactText";
+        max-width: 640px;
         font-size: 16px;
         line-height: 24px;
         text-align: center;
