--- a/assets/style/footer.scss
+++ b/assets/style/footer.scss
@@ -1,6 +1,3 @@
-$max-width: 1570px;
-$margin: 0 auto;
-
 .footer {
     height: 498px;
     margin-top: 140px;
@@ -33,7 +30,7 @@ $margin: 0 auto;
             }
             a {
                 text-decoration: none;
-                font-family: 'SFCompactText';
+                font-family: "SFCompactText";
                 font-weight: 400;
                 font-size: 13px;
                 line-height: 29px;
@@ -51,23 +48,13 @@ $margin: 0 auto;
             }
             input::placeholder {
                 background: url(assets/style/user.svg) no-repeat right;
-               
             }
             .btn {
                 max-width: 376px;
                 height: 80px;
                 background: #73afba;
                 border-radius: 8px;
-                display: flex;
-                justify-content: center;
-                button {
-                    color: #ffffff;
-                    font-size: 12px;
-                    letter-spacing: 2.18182px;
-                    text-align: center;
-                    vertical-align: baseline;
-                    text-transform: uppercase;
-                }
+                @extend %btn;
             }
         }
     }
@@ -84,7 +71,7 @@ $margin: 0 auto;
         line-height: 15px;
         color: #959ea6;
         display: flex;
-        .service{
+        .service {
             padding-right: 40px;
         }
     }
