--- a/assets/style/form.scss
+++ b/assets/style/form.scss
@@ -1,6 +1,3 @@
-$max-width: 1570px;
-$margin: 0 auto;
-
 .wrapForm {
     max-width: $max-width;
     margin: 150px auto 0 auto;
@@ -58,15 +55,7 @@ $margin: 0 auto;
             height: 80px;
             background: #73afba;
             border-radius: 0 0 8px 8px;
-            display: flex;
-            justify-content: center;
-            button {
-                color: #ffffff;
-                font-size: 12px;
-                letter-spacing: 2.18182px;
-                text-align: center;
-                vertical-align: baseline;
-            }
+            @extend %btn;
         }
     }
 }
